# django-htmx-partial-redirect

./: .gitignore  README.md  pyproject.toml
django_htmx_partial_redirect/: middleware.py
