[project.urls]
Homepage = "https://github.com/scriptogre/django-htmx-partial-redirect"
Repository = "https://github.com/scriptogre/django-htmx-partial-redirect.git"

[tool.poetry]
name = "django-htmx-partial-redirect"
version = "0.1.1"
description = "`django-htmx-partial-redirect` is a middleware that redirects direct accesses to partial views (like login modals) to a full page, where the partial content is then lazy-loaded via HTMX, solving the issue of empty pages when accessing modal-intended views directly."
authors = ["Christian Tanul <contact@tanulchristian.dev>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "django_htmx_partial_redirect" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
